# ha-lumagen

./: .commit-msg.aspect-title.tmp  .gitignore  README.md  hacs.json  pyproject.toml
.kiro/steering/: cross-repo.md  product.md  references.md  structure.md  tech.md
custom_components/lumagen/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  media_player.py  number.py  remote.py  select.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/lumagen/translations/: en.json
tests/: conftest.py  test_config_flow.py  test_media_player.py  test_remote.py  test_select.py  test_send_raw_command.py  test_switch_number_select.py
